--- a/writedown/zm/paper.water/ref.bib
+++ b/writedown/zm/paper.water/ref.bib
@@ -121,3 +121,107 @@
   Publisher                = {ACS Publications},
   Timestamp                = {2013.01.18}
 }
+
+@article{bennett1976efficient,
+  title={Efficient estimation of free energy differences from Monte Carlo data},
+  author={Bennett, Charles H},
+  journal={Journal of Computational Physics},
+  volume={22},
+  number={2},
+  pages={245--268},
+  year={1976},
+  publisher={Elsevier}
+}
+
+@article{wang2011existence,
+  title={On the existence of a third-order phase transition beyond the Andrews critical point: A molecular dynamics study},
+  author={Wang, Han and Delle Site, Luigi and Zhang, Pingwen},
+  journal={The Journal of chemical physics},
+  volume={135},
+  number={22},
+  pages={224506},
+  year={2011},
+  publisher={AIP Publishing}
+}
+
+@Article{milchev1986fluctuations,
+  Title                    = {Fluctuations and lack of self-averaging in the kinetics of domain growth},
+  Author                   = {Milchev, A. and Binder, K. and Heermann, DW},
+  Journal                  = {Zeitschrift f{\"u}r Physik B: Condensed Matter},
+  Year                     = {1986},
+  Number                   = {4},
+  Pages                    = {521--535},
+  Volume                   = {63},
+
+  File                     = {milchev1986fluctuations.pdf:milchev1986fluctuations.pdf:PDF},
+  Publisher                = {Springer},
+  Timestamp                = {2010.09.21}
+}
+
+@article{jorgensen1983comparison,
+  title={Comparison of simple potential functions for simulating liquid water},
+  author={Jorgensen, William L and Chandrasekhar, Jayaraman and Madura, Jeffry D and Impey, Roger W and Klein, Michael L},
+  journal={The Journal of chemical physics},
+  volume={79},
+  number={2},
+  pages={926--935},
+  year={1983},
+  publisher={AIP Publishing}
+}
+
+@Article{nose1984molecular,
+  Title                    = {A molecular dynamics method for simulations in the canonical ensemble},
+  Author                   = {Nos{\'e}, S.},
+  Journal                  = {Molecular Physics},
+  Year                     = {1984},
+  Number                   = {2},
+  Pages                    = {255--268},
+  Volume                   = {52},
+
+  File                     = {nose1984molecular.pdf:nose1984molecular.pdf:PDF},
+  Publisher                = {Taylor \& Francis},
+  Timestamp                = {2010.09.19}
+}
+
+@Article{hoover1985canonical,
+  Title                    = {Canonical dynamics: Equilibrium phase-space distributions},
+  Author                   = {Hoover, W.G.},
+  Journal                  = {Physical Review A},
+  Year                     = {1985},
+  Number                   = {3},
+  Pages                    = {1695--1697},
+  Volume                   = {31},
+
+  File                     = {hoover1985canonical.pdf:hoover1985canonical.pdf:PDF},
+  ISSN                     = {1094-1622},
+  Publisher                = {APS},
+  Timestamp                = {2011.03.06}
+}
+
+@Article{parrinello1980crystal,
+  Title                    = {Crystal structure and pair potentials: A molecular-dynamics study},
+  Author                   = {Parrinello, M. and Rahman, A.},
+  Journal                  = {Physical Review Letters},
+  Year                     = {1980},
+  Number                   = {14},
+  Pages                    = {1196--1199},
+  Volume                   = {45},
+
+  File                     = {parrinello1980crystal.pdf:parrinello1980crystal.pdf:PDF},
+  Publisher                = {APS},
+  Timestamp                = {2010.07.12}
+}
+
+@Article{parrinello1981polymorphic,
+  Title                    = {Polymorphic transitions in single crystals: A new molecular dynamics method},
+  Author                   = {Parrinello, M. and Rahman, A.},
+  Journal                  = {Journal of Applied Physics},
+  Year                     = {1981},
+  Pages                    = {7182},
+  Volume                   = {52},
+
+  File                     = {parrinello1981polymorphic.pdf:parrinello1981polymorphic.pdf:PDF},
+  Review                   = {Parrinello-Rahman barostat},
+  Timestamp                = {2010.05.13}
+}
+
